# scran.chan

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  configure
R/: RcppExports.R  aggregateAcrossCells.R  assignReferenceClusters.R  clusterKmeans.R  clusterSNNGraph.R  combineMatrix.R  downsampleByNeighbors.R  filterCells.R  groupedSizeFactors.R  initializeSparseMatrix.R  logNormCounts.R  marshalToSCE.R  mnnCorrect.R  modelGeneVar.R  namespace.R  parallel.R  perCellAdtQcMetrics.R  perCellCrisprQcMetrics.R  perCellQCFilters.R  perCellQCMetrics.R  perCellQCMetrics.lite.R  perCellRnaQcMetrics.R  projectNeighborEmbedding.R  quickAdtSizeFactors.R  quickBasicAnalysis.R  quickMergedAnalysis.R  runAllDownstream.R  runAllNeighbors.R  runPCA.R  runTSNE.R  runUMAP.R  scaleByNeighbors.R  scoreFeatureSet.R  scoreMarkers.R  subsetMatrix.R  suggestAdtQcFilters.R  suggestCrisprQcFilters.R  suggestRnaQcFilters.R  utils.R
man/: aggregateAcrossCells.chan.Rd  assignReferenceClusters.chan.Rd  clusterKmeans.chan.Rd  clusterSNNGraph.chan.Rd  combineMatrix.Rd  downsampleByNeighbors.chan.Rd  filterCells.chan.Rd  groupedSizeFactors.Rd  initializeSparseMatrix.Rd  logNormCounts.chan.Rd  marshalToSCE.Rd  mnnCorrect.chan.Rd  modelGeneVar.chan.Rd  perCellAdtQcMetrics.chan.Rd  perCellCrisprQcMetrics.chan.Rd  perCellQCFilters.chan.Rd  perCellQCMetrics.chan.Rd  perCellQCMetrics.lite.Rd  perCellRnaQcMetrics.chan.Rd  projectNeighborEmbedding.chan.Rd  quickBasicAnalysis.Rd  quickMergedAnalysis.Rd  runAllDownstream.Rd  runAllNeighbors.Rd  runPCA.chan.Rd  runTSNE.chan.Rd  runUMAP.chan.Rd  scaleByNeighbors.chan.Rd  scoreFeatureSet.chan.Rd  scoreMarkers.chan.Rd  subsetMatrix.Rd  suggestAdtQcFilters.chan.Rd  suggestCrisprQcFilters.chan.Rd  suggestRnaQcFilters.chan.Rd
src/: INCLUDES  Makevars  RcppExports.cpp  ResolvedBatch.h  ResolvedFeatures.h  aggregate_across_cells.cpp  assign_reference_clusters.cpp  bindings.cpp  blocked_pca.cpp  build_nn_index.cpp  cluster_kmeans.cpp  cluster_kmeans.h  cluster_snn_graph.cpp  cluster_snn_graph.h  combine_matrix.cpp  config.h  downsample_by_neighbors.cpp  filter_cells.cpp  format_pca_output.h  grouped_size_factors.cpp  initialize.cpp  initialize_from_CSC.cpp  initialize_from_blocks.cpp  initialize_from_dgCMatrix.cpp  initialize_from_hdf5.cpp  initialize_from_memory.cpp  knncolle.h  log_norm_counts.cpp  mnn_correct.cpp  model_gene_var.cpp  per_cell_adt_qc_metrics.cpp  per_cell_crispr_qc_metrics.cpp  per_cell_qc_filters.cpp  per_cell_qc_metrics.cpp  per_cell_rna_qc_metrics.cpp  project_neighbor_embedding.cpp  query_tatami.cpp  run_all_downstream.cpp  run_all_neighbors.cpp  run_blocked_pca.cpp  (+16 more)
src/dependencies/: CMakeLists.txt
src/static/: CMakeLists.txt
src/static/include/scran/static/: bindings.hpp
src/static/src/: PerCellQCMetrics.cpp
tests/: testthat.R
tests/testthat/: setup.R  test-aggregateAcrossCells.R  test-assignReferenceClusters.R  test-clusterKmeans.R  test-clusterSNNGraph.R  test-combineMatrix.R  test-downsampleByNeighbors.R  test-groupedSizeFactors.R  test-initializeSparseMatrix.R  test-logNormCounts.R  test-mnnCorrect.R  test-perCellAdtQcMetrics.R  test-perCellCrisprQcMetrics.R  test-perCellRnaQcMetrics.R  test-projectNeighborEmbedding.R  test-runAllDownstream.R  test-runPCA.R  test-runTSNE.R  test-runUMAP.R  test-scaleByNeighbors.R  test-scoreFeatureSet.R  test-scoreMarkers.R  test-subsetMatrix.R
